# test_spdlog_with_submodules

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
